# hainghia.github.io

./: .editorconfig  .env.example  .gitignore  Makefile  README.md  book.toml  index.html  justfile  pyproject.toml
.github/workflows/: main.yaml
command/: __init__.just
command/common/: __init__.just  constants.just
command/github/: __init__.just  git-commit.just
command/mdbook/: __init__.just  mdbook.just
src/: README.md  SUMMARY.md  chapter_1.md
src/install/: macbook.md  windows.md
src/interview/: frontend.md
src/language/python/: debug.md  ticket.md
src/language/rust/: installation.md
src/pages/: colors-cheat-sheet.html
src/resume/: affiliate_marketing.md  event_tickets.md  index.html  introduction.md
src/signature/: signature.html
src/skill/: data_engineer.md  docker.md  microservice.md  php.md  python.md
